--- a/lib/html5/README.rdoc
+++ b/lib/html5/README.rdoc
@@ -1,5 +1,5 @@
 
-= Kokone::HTML5
+= Alpha:HTML5
 
 HTML5 comes with so many lovely features. We have to use it!
 
@@ -9,16 +9,16 @@ Everything! Work has just started.
 
 === Implemented only when missing
 
-Right now browsers don't support HTML5 features, but they will soon.
-We thus need to detect if the browser is lacking or implementing
-natively each feature.
+Right now browsers don't support HTML5 features, but they will soon. We thus need to detect if the browser is lacking or implementing natively each feature.
 
-See http://diveintohtml5.org/detect.html
+See:
+
+- http://diveintohtml5.org/detect.html
+- http://diveintohtml5.org/everything.html
 
 === Datalists
 
-There is an autocompleter in Kokone::UI. It should be rewritten to
-follow the datalist standard. A generic Datalist object could be
-used to implement search inputs (which show the n last searches)
-for instance, and certainly more.
+There is an autocompleter in Alpha:UI. It should be rewritten to follow the datalist standard.
+
+A generic Datalist object could be used to implement search inputs (which show the n last searches) for instance, and certainly more.
 
